Remove duplicidade de probabilidades de mercado
